@@ -1,3 +1,8 @@
+Sun May 15 10:57:26 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* vm_insnhelper.c (vm_get_ev_const): warn deprecated constant even
+	  in the class context.  [ruby-core:75505] [Bug #12382]
+
 Sun May 15 03:13:01 2016  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* iseq.h (struct iseq_compile_data): use struct rb_id_table
